@@ -4,30 +4,34 @@ import com.br.pdvpostocombustivel.api.preco.dto.PrecoRequest;
 import com.br.pdvpostocombustivel.api.preco.dto.PrecoResponse;
 import com.br.pdvpostocombustivel.domain.entity.Preco;
 import com.br.pdvpostocombustivel.domain.entity.Produto;
+import com.br.pdvpostocombustivel.domain.repository.PrecoRepository;
 import com.br.pdvpostocombustivel.domain.repository.ProdutoRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.Date;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class PrecoService {
 
-    private final com.br.pdvpostocombustivel.api.preco.PrecoRepository repository;
+    private final PrecoRepository repository;
     private final ProdutoRepository produtoRepository;
 
-    public PrecoService(com.br.pdvpostocombustivel.api.preco.PrecoRepository repository, ProdutoRepository produtoRepository) {
+    public PrecoService(PrecoRepository repository, ProdutoRepository produtoRepository) {
         this.repository = repository;
         this.produtoRepository = produtoRepository;
     }
 
+    /** ✅ Retorna lista de PrecoResponse (DTO) */
     public List<PrecoResponse> getAllSemPaginacao() {
         return repository.findAll()
                 .stream()
                 .map(PrecoResponse::fromEntity)
-                .toList();
+                .collect(Collectors.toList());
     }
 
+    /** ✅ Cria ou atualiza um preço */
     public Preco createOrUpdate(PrecoRequest req) {
 
         Produto produto = produtoRepository.findById(req.getProdutoId())
@@ -35,7 +39,9 @@ public class PrecoService {
 
         Preco preco = repository.findByProdutoId(req.getProdutoId());
 
-        if (preco == null) preco = new Preco();
+        if (preco == null) {
+            preco = new Preco();
+        }
 
         preco.setProduto(produto);
         preco.setValor(req.getValor());
@@ -45,6 +51,7 @@ public class PrecoService {
         return repository.save(preco);
     }
 
+    /** ✅ Deleta preço por ID */
     public void delete(Long id) {
         repository.deleteById(id);
     }
